turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:7: error: ':' expected but ')' found.
def setCouleurSol(couleur){
                         ^LangtonsAnt:19: error: identifier expected but '}' found.
}
^