turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  getCouleurSol() match{
    case Couleur.BLACK =>setCouleurSol(Couleur.WHITE); right(); avance();
    case Couleur.WHITE =>setCouleurSol(Couleur.BLACK); left(); avance();
  }
}

def setCouleurSol(couleur){
  setCouleurBrosse(couleur); baisseBrosse; leveBrosse;
}